# vulkan

./: .clang-format  .gitignore  AssetCreator.c  AssetManager.c  AssetManager.h  AssetStructures.h  CMakeLists.txt  File.c  File.h  Game.c  Game.h  InternalVulkan.c  InternalVulkan.h  Main.c  Timer.c  Timer.h  Utilities.h  Window.c  Window.h
assets/: CMakeLists.txt  manifest.json
assets/models/: Oozey_glb.glb
shaders/: CMakeLists.txt  quad.glsl.frag  quad.glsl.vert
textures/: CMakeLists.txt
